--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "uuid": "^8.2.0"
   },
   "scripts": {
-    "start": "node server",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
